removed unused imports

--- a/database.ipynb
+++ b/database.ipynb
@@ -30,10 +30,7 @@
     "import csv\n",
     "from sqlalchemy import create_engine, text\n",
     "from sqlalchemy_utils.functions import database_exists, create_database\n",
-    "from pprint import pprint\n",
-    "from pathlib import Path\n",
-    "from datetime import datetime\n",
-    "from IPython.display import display\n"
+    "from pathlib import Path\n"
    ]
   },
   {
